--- a/src/Makefile
+++ b/src/Makefile
@@ -4,6 +4,7 @@ OUT_DIR=generated
 # Allow overriding with certain cmd line args
 SERVER_PORT ?= 50051
 N_CLIENTS ?= 1
+CLIENT_ID ?= 1
 
 # Find all .proto files in the proto directory
 PROTO_FILES=$(wildcard $(PROTO_DIR)/*.proto)
@@ -15,13 +16,15 @@ compile: $(GENERATED_FILES)
 
 $(OUT_DIR)/%_pb2.py: $(PROTO_DIR)/%.proto
 	python3 -m grpc_tools.protoc --proto_path=$(PROTO_DIR) --python_out=$(OUT_DIR) --grpc_python_out=$(OUT_DIR) $<
-	pip3 install -r requirements.txt
 
 consul:
 	consul agent -dev
 	
 start_server:
 	python3 server/fl_server.py --port=$(SERVER_PORT)
+
+setup:
+	python3 ../setup.py --num_clients=3
 
 start_clients:
 	@for i in $(shell seq 1 $(N_CLIENTS)); do \
