--- a/clients/1/received_files/fl_config.json
+++ b/clients/1/received_files/fl_config.json
@@ -1,1 +1,1 @@
-{"num_epochs": 5, "learning_rate": 0.001, "optimizer": "Adam", "batch_size": 32, "model_type": "DiabetesMLP", "client_fraction": 1.0}
+{"num_epochs": 10, "learning_rate": 0.01, "optimizer": "Adam", "batch_size": 64, "model_type": "MNISTMLP", "client_fraction": 1.0}
