--- a/src/server/fl_config_server.json
+++ b/src/server/fl_config_server.json
@@ -1,1 +1,1 @@
-{"training_algo": "FedAvg", "num_epochs": 3, "learning_rate": 0.001, "optimizer": "Adam", "batch_size": 32, "model_type": "FashionMNISTCNN"}
+{"training_algo": "FedSGD", "num_epochs": 1, "learning_rate": 0.001, "optimizer": "Adam", "batch_size": 32, "model_type": "DiabetesMLP"}
