sharding code done

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,9 +3,9 @@ OUT_DIR=generated
 
 # Allow overriding with certain cmd line args
 SERVER_PORT ?= 50051
-IID ?= 20 # Number of IID clients
-NonIID ?= 0 # Number of Non IID clients
-x ?= 1 # Number of classes to each Non IID
+IID ?= 5 # Number of IID clients
+NonIID ?= 5 # Number of Non IID clients
+x ?= 2 # Number of classes to each Non IID
 ENCRYPT ?= 1 # 1 for encryption, 0 for no encryption
 
 # Find all .proto files in the proto directory
@@ -55,6 +55,8 @@ kill_clients:
 
 clean:
 	@$(MAKE) kill_clients
+	- rm -rf $(OUT_DIR)/*_pb2.py*
+	- rm -rf $(OUT_DIR)/*_pb2_grpc.py*
 	- find . -name "__pycache__" -type d -exec rm -rf {} +
 	- rm -rf clients
 	- rm -rf server/logs
